tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__LooktotheEdges-AAAAAAAAAAAAAAAAAAAAGw==__TormentedTwine-AAAAAAAAAAAAAAAAAAAGIg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1570,
  "prerequisites": [
    335
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Tormented Twine is spun from Disturbed Cotton using a Spinning Wheel. It is an ingredient used to make Dream Catchers.\n\nIt is made in a Spinning Wheel using Disturbed Cotton, Blood Burned String and Reek of Misfortune.\n\n[warn]You need a T2 BM Blood Altar to make the string, so go over to the BM tab if you want to continue and haven't done that yet.[/warn]\n\nAn Altar must be nearby to power the spinning wheel.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Tormented Twine",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    335
  ],
  "rewards": [],
  "tasks": []
}
