tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__LooktotheEdges-AAAAAAAAAAAAAAAAAAAAGw==__WakeUpEarly-AAAAAAAAAAAAAAAAAAAGHw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1567,
  "prerequisites": [
    1566
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Your second visit hopefully went a little better. With night vision and the flight potion you should have found a few disturbed cotton.\n\nDisturbed Cotton can be spun into Tormented Twine. It cannot be replanted.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Wake Up Early",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1566
  ],
  "rewards": [],
  "tasks": []
}
